# xml-to-json-fast

./: LICENSE  README.md  stack.yaml  xml-to-json-fast.cabal
src-exec/: Main.hs
src/Text/XML/JSON/: StreamingXmlToJson.hs
test/: escape.xml  unicode.xml
